--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --bs-body-bg: #f5f5f9;
+}
+
+html,
+body {
+  background-color: var(--bs-body-bg) !important;
+  font-size: 100%;
+}
